@@ -731,7 +731,7 @@ sub OutputFunction {
     my $id = &CreateValidSGMLID ($symbol);
 
     # Take out the return type
-    $declaration =~ s/<RETURNS>\s*(const\s+|unsigned\s+)*(\w+)\s*(\**)\s*<\/RETURNS>\n//;
+    $declaration =~ s/<RETURNS>\s*(const\s+|G_CONST_RETURN\s+|unsigned\s+)*(\w+)\s*(\**)\s*<\/RETURNS>\n//;
     my $type_modifier = defined($1) ? $1 : "";
     my $type = $2;
     my $pointer = $3;
